--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link href="./src/output.css" rel="stylesheet" /> -->
     <title>Othman EL HADRATI</title>
-      <link rel="icon" type="image/x-icon" href="./src/assets/icon.png" />
-
+    <link rel="icon" type="image/x-icon" href="./src/assets/icon.png" />
+    <link rel="modulepreload" href="/src/main.jsx" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx" crossorigin></script>
   </body>
 </html>
