feat: integrate Google Tag Manager for enhanced tracking capabilities

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, 'script', 'dataLayer', 'GTM-564V2LBT');
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FKMSH2YKY"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-1FKMSH2YKY');
+    </script>
     <!-- End Google Tag Manager -->
   </head>
   <body>
